--- a/src/app/ticket-edit/ticket-edit.component.html
+++ b/src/app/ticket-edit/ticket-edit.component.html
@@ -1,3 +1,26 @@
-<p>
-  ticket-edit works!
-</p>
+<mat-card>
+  <form #ticketForm="ngForm" (ngSubmit)="save(ticketForm.value)">
+    <mat-card-header>
+      <mat-card-title><h2>{{ticket.name ? 'Edit' : 'Add'}} Ticket</h2></mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <input type="hidden" name="href" [(ngModel)]="ticket.href">
+      <mat-form-field>
+        <input matInput placeholder="Ticket Name" [(ngModel)]="ticket.name"
+               required name="name" #name>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit"
+              [disabled]="!ticketForm.form.valid">Save</button>
+      <button mat-raised-button color="secondary" (click)="remove(ticket.href)"
+              *ngIf="ticket.href" type="button">Delete</button>
+      <a mat-button routerLink="/ticket-list">Cancel</a>
+    </mat-card-actions>
+    <mat-card-footer>
+      <div class="giphy">
+        <img src="{{ticket.giphyUrl}}" alt="{{ticket.name}}">
+      </div>
+    </mat-card-footer>
+  </form>
+</mat-card>
